syntax = "proto3";
package corepb;


message Genesis {
    uint32            chain_id = 1;
    repeated TokenDistribution super_nodes = 2;
    repeated TokenDistribution standby_nodes = 3;
    TokenDistribution foundation = 4;
    TokenDistribution founding_team = 5;
    TokenDistribution node_deployment = 6;
    TokenDistribution founding_community = 7;
    TokenDistribution ecological_construction = 8;
}


message TokenDistribution {
    string address = 1;
    string value = 2;
}


message StandByNodes {
    repeated string standby_nodes = 1;
}

message SuperNodes {
    repeated string super_nodes = 1;
}


